# matching-app

./: App.js  App.tsx  README.md  app.json  index.js  package.json
__tests__/: App-test.tsx
aias/: Aias.js
android/: build.gradle  settings.gradle
android/app/: _BUCK  build.gradle
components/UIParts/: ChatCard.js
components/screen/: OnbordingScreen.tsx  OpnerScreen.tsx  SMSInputScreen.tsx  SMSVerifyScreen.tsx  TestTorScreen.tsx
components/screens/: Chat.js  ChatIndex.js  Home.js  TestTorScreen.js
components/uiParts/: opnerCheckbox.tsx
ios/: BridgingHeader.swift  DistributedBbs.m  DistributedBbs.swift  MatchingApp-Bridging-Header.h  Podfile
ios/Classes/: DistributedBbs.m  DistributedBbsModule.h  DistributedBbsModule.h.template  DistributedBbsPlugin.h
ios/MatchingApp/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/MatchingApp.xcodeproj/: project.pbxproj
ios/MatchingAppTests/: MatchingAppTests.m
ios/aias_app_new/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/aias_app_new.xcodeproj/: project.pbxproj
ios/aias_app_new.xcworkspace/: contents.xcworkspacedata
ios/aias_app_newTests/: aias_app_newTests.m
rust/: Cargo.toml  Makefile  cbindgen.toml
rust/distributed-bbs-mobile/: Cargo.toml  Makefile
rust/distributed-bbs-mobile/src/: android.rs  ios.h  ios.rs  lib.rs
rust/src/: android.rs  lib.rs
screens/: Chat.js  ChatIndex.js  Home.js  Matching.js  Sub.js
screens/Auth/: SignIn.js  Signup.js  Top.js
screens/Matching/: Match.js  Start.js
util/: api.js  router.ts  yup.js
util/types/: OpnerType.ts
(+21 files in other folders)
