[package]
name = "distributed-bbs-mobile"
version = "0.1.0"
edition = "2018"

[lib]
name = "distributed_bbs_mobile"
crate-type = ["staticlib", "cdylib"]


[features]
android = []
ios = []
default = []

[dependencies]
jni = { version = "0.19.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "0.15.5"
base64 = "0.13.0"
rand = "0.8.4"
arrayref = "0.3.6"
libc = "0.2.101"

[dependencies.distributed-bss]
git="https://github.com/pj-aias/distributed-bbs"
branch = "main"
default-features=false

# [dependencies.bls12_381]
# git="https://github.com/akakou/bls12_381/"
# branch="features/gt_supports"
# default-features=false
# features=["alloc", "group", "pairings", "serde"]
